force-app/main/default/objects/CWS_Acc_Admin_Profiles__mdt/CWS_Acc_Admin_Profiles__mdt.object-meta.xml
<CustomObject>
    <label>Account Admin Profiles</label>
    <pluralLabel>Account Admin Profiles</pluralLabel>
</CustomObject>