force-app/main/default/objects/CWS_Acc_Admin_Profiles__mdt/fields/CWS_Is_After_Partner__c.field-meta.xml
<CustomField>
    <fullName>CWS_Is_After_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to identify profile which need edit access after account become partner.</description>
    <label>is After Partner</label>
    <type>Checkbox</type>
</CustomField>