force-app/main/default/objects/CWS_Acc_Admin_Profiles__mdt/fields/CWS_Is_Before_partner__c.field-meta.xml
<CustomField>
    <fullName>CWS_Is_Before_partner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to identify profiles which need edit access on restricted account fields before it becomes partner and order form generated on quote.</description>
    <label>is before partner</label>
    <type>Checkbox</type>
</CustomField>