force-app/main/default/objects/CWS_Acc_Admin_Profiles__mdt/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <description>Profile Api Name</description>
    <label>Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>