force-app/main/default/objects/CWS_Acc_Admin_Profiles__mdt/listViews/Expanded_view.listView-meta.xml
<ListView>
    <fullName>Expanded_view</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>CWS_Is_After_Partner__c</columns>
    <columns>CWS_Is_Before_partner__c</columns>
    <columns>Profile__c</columns>
    <filterScope>Everything</filterScope>
    <label>Expanded view</label>
    <language>en_US</language>
</ListView>